--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Public Projects on GitHub Pages</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>My Public Projects on GitHub Pages</h1>
-    <p>Welcome to my public projects site.</p>
+    <div class="container">
+        <h1>My Public Projects on GitHub Pages</h1>
+        <p>Welcome to my public projects site.</p>
 
-    <table>
-        <tr>
-            <td><a href="https://mimyllyv.github.io/cablecover">Cablecover</a></td>
-        </tr>
-    </table>
+        <table>
+            <tr>
+                <td><a href="https://mimyllyv.github.io/cablecover">Cablecover</a></td>
+            </tr>
+        </table>
+    </div>
 </body>
 </html>
