--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <table>
             <tr>
                 <td><a href="https://mimyllyv.github.io/cablecover">Cablecover</a></td>
+                <td>App to do parametric cable cover design and export stl for 3d printing.</td>
+                <td><a href="https://www.printables.com/model/1222616-parametric-cable-hider">To printables</a></td>
             </tr>
         </table>
     </div>
