--- a/index.html
+++ b/index.html
@@ -11,11 +11,20 @@
         <h1>My Public Projects on GitHub Pages</h1>
         <p>Welcome to my public projects site.</p>
 
+        <h2>Apps</h2>
         <table>
             <tr>
                 <td><a href="https://mimyllyv.github.io/cablecover">Cablecover</a></td>
                 <td>App to do parametric cable cover design and export stl for 3d printing.</td>
                 <td><a href="https://www.printables.com/model/1222616-parametric-cable-hider">To printables</a></td>
+            </tr>
+        </table>
+        <h2>Games</h2>
+        <table>
+            <tr>
+                <td><a href="https://mimyllyv.github.io/yatzy">Yatzy</a></td>
+                <td>Threejs yatzy with physics</td>
+                <td></td>
             </tr>
         </table>
     </div>
